--- a/Stock/styles.css
+++ b/Stock/styles.css
@@ -153,7 +153,7 @@ html {
     background: #a8a2ff22;
 }
 #api-status-indicator.dropdown-open .api-expanded {
-    max-height: none;
+    max-height: 400px;
 }
 
 /* API dot status */
@@ -734,6 +734,7 @@ body {
     flex-direction: column;
     gap: 20px;
     width: 300px;
+    padding: 20px;
 }
 
 .sidebar-section-title {
