--- a/Stock/styles.css
+++ b/Stock/styles.css
@@ -560,10 +560,11 @@ body {
 }
 
 .info-item {
-    background: rgba(40, 40, 48, 0.5);
+    background:
+        linear-gradient(to top, rgba(255, 255, 255, 0.01) 0%, rgba(100, 100, 100, 0.2) 100%);
     border-radius: 12px;
     padding: 12px;
-    border: 1px solid rgba(168, 162, 255, 0.08);
+    border: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .info-label {
